# task_5_vec_edit

./: .gitignore  CMakeLists.txt  StrTool.cpp  StrTool.h  VecController.h  VecFile.cpp  VecFile.h  VecModel.cpp  VecModel.h  VecView.cpp  VecView.h  main.cpp  stdafx.h
.github/workflows/: Release.yml
